Rewrite CustomerController with HttpServer